# DistrRL_MonteCarlo

./: .#preliminary_tests.py  .flake8  .gitattributes  .gitignore  090424_ws.ipynb  130424.ipynb  170424.ipynb  200624.ipynb  CMakeLists.txt  Pipfile  README.md  Untitled.ipynb  __init__.py  approx_distr.ipynb  compile_commands.json  distributions.py  experiments.ipynb  mt.cpp  mt.cu  mt_perf.mojo  next_steps.org  preliminary_tests.py  py_perf.py  sample_envs.py  simpleMDPs.ipynb  tests.py  utils.py  visualize.py
.nvim/: dap.lua
src/: config.py  ddp.py  distributions.py  drl_primitives.py  experiments.py  monte_carlo.py  nb_fun.py  param_algorithms.py  preliminary_tests.py  projections.py  random_variables.py  sample_envs.py  utils.py  visualize.py
tests/: __main__.py  revise_tests.py  test_bernoulli.py  test_cdf_algos.py  test_ddp.py  test_montecarlo.py  test_on_normal_distr.py  test_projections.py  test_random_variable.py  test_wasserstein_distances.py  tests.py
